strings.xml: created strings to avoid magic strings

--- a/DebuggingTest/app/src/main/res/values/strings.xml
+++ b/DebuggingTest/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DebuggingTest</string>
+    <string name="click_name">Add Clicks</string>
+    <string name="unclick_name">Remove Clicks</string>
+    <string name="top_label">Hello Debugging World!</string>
 </resources>
