--- a/IMCCalculator/app/src/main/res/values/strings.xml
+++ b/IMCCalculator/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">IMC Calc</string>
+    <string name="app_name">IMC</string>
     <string name="calculate_btn">Calculate</string>
+    <string name="placeholder_weight">Weight in Kg (e.g: 65.4)</string>
+    <string name="placeholder_height">Height in cm (e.g: 1.78)</string>
 </resources>
